flex/debug/grammar.output
Nonterminals useless in grammar

    bool_expr


Terminals unused in grammar

    OTHER


Grammar

    0 $accept: prog $end

    1 prog: lines

    2 lines: ε
    3      | line NEWLINE lines

    4 line: exprs

    5 exprs: ε
    6      | expr
    7      | expr SPACE exprs

    8 expr: CMD INT
    9     | CMD FLOAT
   10     | assignment
   11     | arith_expr

   12 assignment: VAR SET arith_expr
   13           | CMD SET arith_expr

   14 val: VAR
   15    | INT
   16    | FLOAT

   17 arith_expr: val
   18           | arith_expr '+' arith_expr
   19           | arith_expr '-' arith_expr
   20           | arith_expr '*' arith_expr
   21           | arith_expr '/' arith_expr


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 20
    '+' (43) 18
    '-' (45) 19
    '/' (47) 21
    error (256)
    SPACE (258) 7
    NEWLINE (259) 3
    SET (260) 12 13
    OTHER (261)
    INT <int> (262) 8 15
    FLOAT <float> (263) 9 16
    VAR <char*> (264) 12 14
    CMD <char*> (265) 8 9 13


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    prog (16)
        on left: 1
        on right: 0
    lines (17)
        on left: 2 3
        on right: 1 3
    line (18)
        on left: 4
        on right: 3
    exprs (19)
        on left: 5 6 7
        on right: 4 7
    expr (20)
        on left: 8 9 10 11
        on right: 6 7
    assignment (21)
        on left: 12 13
        on right: 10
    val <float> (22)
        on left: 14 15 16
        on right: 17
    arith_expr <float> (23)
        on left: 17 18 19 20 21
        on right: 11 12 13 18 19 20 21


State 0

    0 $accept: • prog $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VAR    shift, and go to state 3
    CMD    shift, and go to state 4

    NEWLINE   reduce using rule 5 (exprs)
    $default  reduce using rule 2 (lines)

    prog        go to state 5
    lines       go to state 6
    line        go to state 7
    exprs       go to state 8
    expr        go to state 9
    assignment  go to state 10
    val         go to state 11
    arith_expr  go to state 12


State 1

   15 val: INT •

    $default  reduce using rule 15 (val)


State 2

   16 val: FLOAT •

    $default  reduce using rule 16 (val)


State 3

   12 assignment: VAR • SET arith_expr
   14 val: VAR •

    SET  shift, and go to state 13

    $default  reduce using rule 14 (val)


State 4

    8 expr: CMD • INT
    9     | CMD • FLOAT
   13 assignment: CMD • SET arith_expr

    SET    shift, and go to state 14
    INT    shift, and go to state 15
    FLOAT  shift, and go to state 16


State 5

    0 $accept: prog • $end

    $end  shift, and go to state 17


State 6

    1 prog: lines •

    $default  reduce using rule 1 (prog)


State 7

    3 lines: line • NEWLINE lines

    NEWLINE  shift, and go to state 18


State 8

    4 line: exprs •

    $default  reduce using rule 4 (line)


State 9

    6 exprs: expr •
    7      | expr • SPACE exprs

    SPACE  shift, and go to state 19

    $default  reduce using rule 6 (exprs)


State 10

   10 expr: assignment •

    $default  reduce using rule 10 (expr)


State 11

   17 arith_expr: val •

    $default  reduce using rule 17 (arith_expr)


State 12

   11 expr: arith_expr •
   18 arith_expr: arith_expr • '+' arith_expr
   19           | arith_expr • '-' arith_expr
   20           | arith_expr • '*' arith_expr
   21           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23

    $default  reduce using rule 11 (expr)


State 13

   12 assignment: VAR SET • arith_expr

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VAR    shift, and go to state 24

    val         go to state 11
    arith_expr  go to state 25


State 14

   13 assignment: CMD SET • arith_expr

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VAR    shift, and go to state 24

    val         go to state 11
    arith_expr  go to state 26


State 15

    8 expr: CMD INT •

    $default  reduce using rule 8 (expr)


State 16

    9 expr: CMD FLOAT •

    $default  reduce using rule 9 (expr)


State 17

    0 $accept: prog $end •

    $default  accept


State 18

    3 lines: line NEWLINE • lines

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VAR    shift, and go to state 3
    CMD    shift, and go to state 4

    NEWLINE   reduce using rule 5 (exprs)
    $default  reduce using rule 2 (lines)

    lines       go to state 27
    line        go to state 7
    exprs       go to state 8
    expr        go to state 9
    assignment  go to state 10
    val         go to state 11
    arith_expr  go to state 12


State 19

    7 exprs: expr SPACE • exprs

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VAR    shift, and go to state 3
    CMD    shift, and go to state 4

    $default  reduce using rule 5 (exprs)

    exprs       go to state 28
    expr        go to state 9
    assignment  go to state 10
    val         go to state 11
    arith_expr  go to state 12


State 20

   18 arith_expr: arith_expr '+' • arith_expr

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VAR    shift, and go to state 24

    val         go to state 11
    arith_expr  go to state 29


State 21

   19 arith_expr: arith_expr '-' • arith_expr

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VAR    shift, and go to state 24

    val         go to state 11
    arith_expr  go to state 30


State 22

   20 arith_expr: arith_expr '*' • arith_expr

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VAR    shift, and go to state 24

    val         go to state 11
    arith_expr  go to state 31


State 23

   21 arith_expr: arith_expr '/' • arith_expr

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VAR    shift, and go to state 24

    val         go to state 11
    arith_expr  go to state 32


State 24

   14 val: VAR •

    $default  reduce using rule 14 (val)


State 25

   12 assignment: VAR SET arith_expr •
   18 arith_expr: arith_expr • '+' arith_expr
   19           | arith_expr • '-' arith_expr
   20           | arith_expr • '*' arith_expr
   21           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23

    $default  reduce using rule 12 (assignment)


State 26

   13 assignment: CMD SET arith_expr •
   18 arith_expr: arith_expr • '+' arith_expr
   19           | arith_expr • '-' arith_expr
   20           | arith_expr • '*' arith_expr
   21           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23

    $default  reduce using rule 13 (assignment)


State 27

    3 lines: line NEWLINE lines •

    $default  reduce using rule 3 (lines)


State 28

    7 exprs: expr SPACE exprs •

    $default  reduce using rule 7 (exprs)


State 29

   18 arith_expr: arith_expr • '+' arith_expr
   18           | arith_expr '+' arith_expr •
   19           | arith_expr • '-' arith_expr
   20           | arith_expr • '*' arith_expr
   21           | arith_expr • '/' arith_expr

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23

    $default  reduce using rule 18 (arith_expr)


State 30

   18 arith_expr: arith_expr • '+' arith_expr
   19           | arith_expr • '-' arith_expr
   19           | arith_expr '-' arith_expr •
   20           | arith_expr • '*' arith_expr
   21           | arith_expr • '/' arith_expr

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23

    $default  reduce using rule 19 (arith_expr)


State 31

   18 arith_expr: arith_expr • '+' arith_expr
   19           | arith_expr • '-' arith_expr
   20           | arith_expr • '*' arith_expr
   20           | arith_expr '*' arith_expr •
   21           | arith_expr • '/' arith_expr

    $default  reduce using rule 20 (arith_expr)


State 32

   18 arith_expr: arith_expr • '+' arith_expr
   19           | arith_expr • '-' arith_expr
   20           | arith_expr • '*' arith_expr
   21           | arith_expr • '/' arith_expr
   21           | arith_expr '/' arith_expr •

    $default  reduce using rule 21 (arith_expr)
